--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   mask_text_input_formatter: ^2.9.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
   flutter_test:
